# intelli-file-manager

./: .gitignore  .gitleaks.toml  AI_WORKLOG.md  BRANCH_CLEANUP.md  CONTRIBUTING.md  LICENSE  PRODUCT_IDENTITY.md  README.md  REPO_POLICY.md  SECURITY_NOTES.md  buildozer.spec  cli.py  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: build-apk.yml  ci.yml  credential-scan.yml
docs/: APK_BUILD_INSTRUCTIONS.md  DEVELOPMENT_ROADMAP.md  PWA_INSTRUCTIONS.md  RC_CHECKLIST.md  ROADMAP.md  architecture.md
mobile/: main.py
public/: manifest.json  sw.js
rules/: default_rules.yaml
scripts/: setup.sh
src/: __init__.py  main.py
src/ai/: __init__.py  classifier.py  classifier_modes.py  embeddings.py  file_copilot.py  hybrid_search.py  multimodal_enhanced.py  tagging.py
src/api/: __init__.py  server.py
src/core/: __init__.py  agent_cli.py  ai_engine.py  async_indexer.py  classifier.py  config.py  dry_run_reporter.py  emergent_category.py  enhanced_multimodal.py  file_agent.py  file_copilot.py  file_handler.py  file_inventory.py  hybrid_search.py  logger.py  medical_ner.py  metadata_extractor.py  multimodal_processor.py  plugin_manager.py  predictive_organizer.py  rag_engine.py  relationship_miner.py  rule_engine.py  rule_schemas.py  self_extending_assistant.py  semantic_search.py  smart_tagger.py  undo_log.py  voice_controller.py
src/db/: __init__.py  chroma_db.py  schemas.py
src/gui/: __init__.py  main_window.py  theme_manager.py
tests/: __init__.py  conftest.py
web/: package-lock.json  package.json  tsconfig.tsbuildinfo
(+112 files in other folders)
